OAR CHANGELOG
=============

version 2.4.0:
--------------
  - Added a --state option to oarstat to only get the status of specified jobs 
    (optimized query, to allow scripting)
  - Added a REST API for OAR and OARGRID
  - Added JSON support into oarnodes, oarstat and oarsub
  - New Makefile adapted to build packages as non-root user
  - "oaradmin version" : now retrieve the most recent database schema number
  - Fix rights on the "schema" table in postgresql.
  - Bug #7509: fix bug in add_micheline_subjob for array jobs + jobtypes 
  - Ctrl-C was not working anymore in oarsub.
    It seems that the signal handler does not handle the previous syntax
    ($SIG = 'qdel')
  - Fix bug in oarsh with the "-l" option
  - Bug #7487: bad initialisation of the gnatt for the container jobs.
  - Scheduler: move the "delete_unnecessary_subtrees" directly into
    "find_first_hole". Thus this is possible to query a job like:
        oarsub -I -l nodes=1/core=1+nodes=4/core=2
        (no hard separation between each group)
    For the same behaviour as before, you can query:
        oarsub -I -l {prop=1}/nodes=1/core=1+{prop=2}/nodes=4/core=2
  - Bug #7634: test if the resource property value is effectively defined
    otherwise print a ''

version 2.3.3:
--------------
  - Fix default admission rules: case unsensitive check for properties used in 
    oarsub
  - Add new oaradmin subcommand : oaradmin conf. Useful to edit conf files and 
    keep changes in a Subversion repository.
  - Kill correctly each taktuk command children in case of a timeout.
  - New feature: array jobs (option --array)  (on oarsub, oarstat oardel, 
    oarhold and oarresume) and file-based parametric array jobs 
    (oarsub --array-param-file)
    /!\ in this version the DB scheme has changed. If you want to upgrade your
    installation from a previous 2.3 release then you have to execute in your
    database one of these SQL script (stop OAR before)::

        mysql: