@@ -8,6 +8,8 @@ version 2.4.0:
   - Added a REST API for OAR and OARGRID
   - Added JSON support into oarnodes, oarstat and oarsub
   - New Makefile adapted to build packages as non-root user
+  - add the command "oar_resources_init" to easily detect and initialize the
+    whole resources of a cluster.
   - "oaradmin version" : now retrieve the most recent database schema number
   - Fix rights on the "schema" table in postgresql.
   - Bug #7509: fix bug in add_micheline_subjob for array jobs + jobtypes 
